Upgrading to GraalVM 22.2.0